--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "hello-express",
+  "name": "MC-AT",
   "version": "0.0.1",
   "description": "",
   "main": "bot.js",
   "scripts": {
     "test": "node bot.js"
   },
-  "author": "elwasy",
+  "author": "TheMost#5681",
   "license": "ISC",
   "dependencies": {
     "chalk": "^2.4.2",
