🍟🚒 Checkpoint ./ayarlar.json:8320813/465 ./başlat.bat:8320813/20 ./package.json:8320813/29

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "MC-AT",
+  "name": "Eğlence",
   "version": "0.0.1",
   "description": "",
   "main": "bot.js",
   "scripts": {
     "test": "node bot.js"
   },
-  "author": "TheMost#5681",
+  "author": "owner",
   "license": "ISC",
   "dependencies": {
     "chalk": "^2.4.2",
