--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "bot.js",
   "scripts": {
-    "test": "node bot.js"
+    "start": "node bot.js"
   },
   "author": "owner",
   "license": "ISC",
@@ -13,6 +13,7 @@
     "discord.js": "^11.5.1",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.2.2",
-    "ms": "^2.1.2"
+    "ms": "^2.1.2",
+    "express": "^4.16.4"
   }
 }
